Just the beginning!

--- a/Intro/main.html
+++ b/Intro/main.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SelTA</title>
+    <title>About Us :: WebCheese</title>
 </head>
 <body>
-    <h1>Hello!</h1>
+    <h1>Welcome!</h1>
+    <h3>We're WebCheese, a group consist of students who wants to learn web programming!</h3>
 </body>
 </html>
