Just the beginning!

--- a/Intro/AboutUs.html
+++ b/Intro/AboutUs.html
@@ -7,5 +7,7 @@
 <body>
     <h1>Welcome!</h1>
     <h3>We're WebCheese, a group consist of students who wants to learn web programming!</h3>
+    <img src="All.jpg"/>
+
 </body>
 </html>
